add la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
 
     <p>ESTO ES UN BLOGPOST</p>
+    <div id="cabecera">AQUI EMPIEZA LA CABECERA</div>
     <div id="container">Vamos a añadir una nueva rama a nuestro git</div>
 </body>
 </html>
