Agregado el contenido del BLOG

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,11 @@
 <body>
 
     <p>ESTO ES UN BLOGPOST</p>
-    <div id="container">Vamos a añadir una nueva rama a nuestro git</div>
+    <div id="container">
+        Vamos a añadir una nueva rama a nuestro git
+
+        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas
+
+    </div>
 </body>
 </html>
