--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,16 @@
 <body>
 
     <p>ESTO ES UN BLOGPOST</p>
-    <div id="cabecera">La cabecera se modifica y se termina</div>
-    <div id="container">Vamos a añadir una nueva rama a nuestro git</div>
+    <div id="container">
+        <div id="cabecera">
+            ESTO ES UNA CABECERA CHULA
+        </div>
+        <div id="post">
+        Vamos a añadir una nueva rama a nuestro git
+
+        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas
+        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+        </div>
+    </div>
 </body>
 </html>
