MODIFIQUE LA CABECERA Y EL COLOR

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <p>ESTO ES UN BLOGPOST</p>
+    <p>ESTO ES UN BLOGPOST de Cabecera</p>
     <div id="container">
         <div id="cabecera">
             ESTO ES UNA CABECERA CHULA
