Maquetacion y estilo nueva para el BLOGPOST

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BlogPost de FranLucas</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-
-    <p>ESTO ES UN BLOGPOST MAESTRO</p>
     <div id="container">
         <div id="cabecera">
-            ESTO ES UNA CABECERA CHULA
+            EL BLOGPOST
+            <span id="tagline">de FRANLUCAS</span>
         </div>
         <div id="post">
-        Vamos a añadir una nueva rama a nuestro git
-
-        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+            <h1>What is Lorem Ipsum?</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>    
+            <p>Sigueme en mis RRSS <strong>@franlucas92</strong></p>
         </div>
-        <p>suscribete y dale like</p>
     </div>
 </body>
 </html>
