--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png"/> 
             EL BLOGPOST
             <span id="tagline">de FRANLUCAS</span>
         </div>
