--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
             <p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>    
             <p>Sigueme en mis RRSS <strong>@franlucas92</strong></p>
         </div>
+        <div id="footer">Este es el Footer de la web</div>
     </div>
 </body>
 </html>
