--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRANLUCAS WEB 2.0</title>
+    <title>FRAN LUCAS WEB 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
             <h1>What is Lorem Ipsum?</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>    
-            <p>Sigueme en mis RRSS <strong>@franlucas92</strong></p>
+            <p>Sígueme en mis RRSS <strong>@franlucas92</strong></p>
         </div>
         <div id="footer">Este es el Footer de la web</div>
     </div>
