Modificada el tagLine

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png"/> 
             EL BLOGPOST
-            <span id="tagline">de FRANLUCAS</span>
+            <span id="tagline">de FRANLUCAS Nuevo</span>
         </div>
         <div id="post">
             <h1>What is Lorem Ipsum?</h1>
